WebCore:

2008-06-21  Alex Taylor  <darwin@milliamp.org>

        Reviewed by Dan Bernstein.

        Fixes <https://bugs.webkit.org/show_bug.cgi?id=12425>

        Adds support for border-radius on legend elements.
        Fieldsets with a legend and rounded borders now have a clipping region set
        around the legend.

        Test: fast/borders/fieldsetBorderRadius.html

        * rendering/RenderFieldset.cpp:
        (WebCore::RenderFieldset::paintBoxDecorations):
        (WebCore::RenderFieldset::paintBorderMinusLegend): Removed a FIXME.

LayoutTests:

2008-06-21  Alex Taylor  <darwin@milliamp.org>

        Reviewed by Dan Bernstein.

        <https://bugs.webkit.org/show_bug.cgi?id=12425>
        Test support for border-radius on fieldset elements.

        * fast/borders/fieldsetBorderRadius.html: Added.
        * platform/mac/fast/borders/fieldsetBorderRadius-expected.checksum: Added.
        * platform/mac/fast/borders/fieldsetBorderRadius-expected.png: Added.
        * platform/mac/fast/borders/fieldsetBorderRadius-expected.txt: Added.



Canonical link: https://commits.webkit.org/27163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34715 268f45cc-cd09-0410-ab3c-d52691b4dbfc