WebCore/rendering/RenderFieldset.cpp
@@ -28,6 +28,7 @@
 
 #include "HTMLFormControlElement.h"
 #include "HTMLNames.h"
+#include "GraphicsContext.h"
 
 using std::min;
 using std::max;
@@ -131,8 +132,26 @@ void RenderFieldset::paintBoxDecorations(PaintInfo& paintInfo, int tx, int ty)
 
     paintFillLayers(paintInfo, style()->backgroundColor(), style()->backgroundLayers(), my, mh, tx, ty, w, h);
 
-    if (style()->hasBorder())
-        paintBorderMinusLegend(paintInfo.context, tx, ty, w, h, style(), legend->xPos(), legend->width(), legendBottom);
+    if (!style()->hasBorder())
+        return;
+
+    // Save time by not saving and restoring the GraphicsContext in the straight border case
+    if (!style()->hasBorderRadius())
+        return paintBorderMinusLegend(paintInfo.context, tx, ty, w, h, style(), legend->xPos(), legend->width(), legendBottom);
+    
+    // We have rounded borders, create a clipping region 
+    // around the legend and paint the border as normal
+    GraphicsContext* graphicsContext = paintInfo.context;
+    graphicsContext->save();
+
+    int clipTop = ty;
+    int clipHeight = max(static_cast<int>(style()->borderTopWidth()), legend->height());
+
+    graphicsContext->clipOut(IntRect(tx + legend->xPos(), clipTop,
+                                       legend->width(), clipHeight));
+    paintBorder(paintInfo.context, tx, ty, w, h, style(), true, true);
+
+    graphicsContext->restore();
 }
 
 void RenderFieldset::paintMask(PaintInfo& paintInfo, int tx, int ty)
@@ -160,7 +179,6 @@ void RenderFieldset::paintMask(PaintInfo& paintInfo, int tx, int ty)
 void RenderFieldset::paintBorderMinusLegend(GraphicsContext* graphicsContext, int tx, int ty, int w, int h,
                                             const RenderStyle* style, int lx, int lw, int lb)
 {
-    // FIXME: Implement border-radius
     const Color& tc = style->borderTopColor();
     const Color& bc = style->borderBottomColor();
 
